--- a/F429/LCDTest1/LCDTest1.ioc
+++ b/F429/LCDTest1/LCDTest1.ioc
@@ -1,13 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
-PA6.Mode=RGB666
+PD12.GPIO_Label=LCD RDX
+PA6.Mode=RGB565
 RCC.CortexFreq_Value=180000000
 PG6.Signal=LTDC_R7
 NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F429ZITx
-PB10.Mode=RGB666
+PB10.Mode=RGB565
 LTDC.HBP=20
 CAN2.CalculateTimeBit=4000.00
 PC10.Locked=true
@@ -16,21 +17,23 @@ RCC.PLLCLKFreq_Value=180000000
 PC10.Signal=LTDC_R2
 PC12.Signal=UART5_TX
 RCC.PLLQCLKFreq_Value=90000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true
-PA11.Mode=RGB666
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true
+PA11.Mode=RGB565
 RCC.RTCFreq_Value=32000
 PD6.Locked=true
 PB11.Signal=LTDC_G5
 PB13.Signal=CAN2_TX
-PG6.Mode=RGB666
+PG6.Mode=RGB565
 PinOutPanel.RotationAngle=0
 PG11.Signal=LTDC_B3
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
-RCC.SAI_BClocksFreq_Value=25000000
+RCC.SAI_BClocksFreq_Value=30000000
+PD13.Signal=GPIO_Output
 Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=180000000
 Mcu.IP5=SPI5
+PD13.Locked=true
 Mcu.IP2=LTDC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP3=NVIC
@@ -38,9 +41,9 @@ Mcu.IP0=CAN2
 Mcu.IP1=I2C3
 PA12.Signal=LTDC_R5
 Mcu.UserConstants=
-PA4.Mode=RGB666
+PA4.Mode=RGB565
 PF7.Signal=SPI5_SCK
-RCC.LCDTFTFreq_Value=25000000
+RCC.LCDTFTFreq_Value=12000000
 Mcu.ThirdPartyNb=0
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 RCC.HCLKFreq_Value=180000000
@@ -52,11 +55,11 @@ RCC.VcooutputI2S=192000000
 PC7.Signal=LTDC_G6
 LTDC.WindowX1_L0=240
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA6
-Mcu.Pin9=PB0
-RCC.VCOSAIOutputFreq_Value=100000000
+Mcu.Pin6=PC2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA6
+RCC.VCOSAIOutputFreq_Value=120000000
 RCC.AHBFreq_Value=180000000
 Mcu.Pin0=PF7
 Mcu.Pin1=PF8
@@ -84,157 +87,170 @@ LTDC.HFP=10
 PA8.Signal=I2C3_SCL
 PF8.Mode=Full_Duplex_Master
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PD3.Mode=RGB666
+PD3.Mode=RGB565
 LTDC.ActiveW=240
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 LTDC.HSync=10
 ProjectManager.HalAssertFull=false
-ProjectManager.ProjectName=LCDTest
+ProjectManager.ProjectName=LCDTest1
 RCC.MCO2PinFreq_Value=180000000
+PD13.GPIO_Label=LCD WRX
 Mcu.Package=LQFP144
 PB9.Signal=LTDC_B7
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 PB1.Signal=LTDC_R6
 PA6.Signal=LTDC_G2
 PB12.Mode=CAN_Activate
 CAN2.BS1=CAN_BS1_16TQ
 CAN2.BS2=CAN_BS2_3TQ
 PG11.Locked=true
+PD12.Signal=GPIO_Output
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PF8.Signal=SPI5_MISO
 UART5.IPParameters=VirtualMode
-RCC.PLLSAIN=50
-SPI5.CalculateBaudRate=45.0 MBits/s
+RCC.PLLSAIN=60
+SPI5.CalculateBaudRate=11.25 MBits/s
+RCC.PLLSAIR=5
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 LTDC.VSync=2
 RCC.APB1TimFreq_Value=90000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PF10.Mode=RGB666
+PF10.Mode=RGB565
 PB13.Mode=CAN_Activate
 PD6.Signal=LTDC_B2
+PC2.GPIO_Label=LCD CSX
 SPI5.VirtualType=VM_MASTER
 ProjectManager.CustomerFirmwarePackage=
-RCC.SAI_AClocksFreq_Value=25000000
+RCC.SAI_AClocksFreq_Value=30000000
 PA3.Signal=LTDC_B5
 PG12.Signal=LTDC_B4
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 CAN2.CalculateBaudRate=250000
-ProjectManager.ProjectFileName=LCDTest.ioc
+ProjectManager.ProjectFileName=LCDTest1.ioc
 LTDC.VFP=4
 PG7.Locked=true
 LTDC.WindowY1_L0=320
 PG7.Signal=LTDC_CLK
-Mcu.PinsNb=34
+Mcu.PinsNb=37
 ProjectManager.NoMain=false
 PD3.Signal=LTDC_G7
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+PC2.Signal=GPIO_Output
 PC6.Signal=LTDC_HSYNC
-PC10.Mode=RGB666
-PG10.Mode=RGB666
+PG10.Mode=RGB565
+PD13.GPIOParameters=GPIO_Label
 ProjectManager.DefaultFWLocation=true
-RCC.VCOSAIOutputFreq_ValueQ=25000000
-RCC.VCOSAIOutputFreq_ValueR=50000000
+RCC.VCOSAIOutputFreq_ValueQ=30000000
+RCC.VCOSAIOutputFreq_ValueR=24000000
 ProjectManager.DeletePrevious=true
 UART5.VirtualMode=Asynchronous
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-PD6.Mode=RGB666
 SPI5.Mode=SPI_MODE_MASTER
 RCC.FamilyName=M
 PG10.Signal=LTDC_G3
-LTDC.ImageWidth_L0=240
 PG10.Locked=true
-PA3.Mode=RGB666
+LTDC.ImageWidth_L0=240
+PD12.Locked=true
+PA3.Mode=RGB565
 PF7.Mode=Full_Duplex_Master
-PB11.Mode=RGB666
+PD12.GPIOParameters=GPIO_Label
+PB11.Mode=RGB565
 ProjectManager.TargetToolchain=STM32CubeIDE
 LTDC.ActiveH=320
-PC6.Mode=RGB666
-PB9.Mode=RGB666
+PC6.Mode=RGB565
+PB9.Mode=RGB565
 RCC.VcooutputI2SQ=192000000
+PC2.Locked=true
 ProjectManager.RegisterCallBack=
-PG7.Mode=RGB666
+PG7.Mode=RGB565
 RCC.LSE_VALUE=32768
 PB10.Signal=LTDC_G4
 RCC.VCOI2SOutputFreq_Value=384000000
 PD2.Mode=Asynchronous
 PC12.Mode=Asynchronous
-PB0.Mode=RGB666
+PB0.Mode=RGB565
 board=custom
-PG12.Mode=RGB666
+PG12.Mode=RGB565
 RCC.VCOOutputFreq_Value=360000000
 ProjectManager.LastFirmware=true
 PH0/OSC_IN.Signal=RCC_OSC_IN
 RCC.APB2Freq_Value=90000000
 MxCube.Version=6.2.1
 LTDC.Layers=0
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_SYS_VS_Systick
 PF10.Signal=LTDC_DE
-Mcu.Pin30=PG12
+PC2.GPIOParameters=GPIO_Label
+Mcu.Pin30=PD6
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=180000000
 CAN2.CalculateTimeQuantum=200.0
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin31=PB8
-Mcu.Pin32=PB9
+Mcu.Pin33=PG12
+Mcu.Pin34=PB8
+Mcu.Pin31=PG10
+Mcu.Pin32=PG11
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.FreePins=false
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSAIR,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F429ZITx
-Mcu.Pin26=PD3
-Mcu.Pin27=PD6
+Mcu.Pin26=PC10
+Mcu.Pin27=PC12
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PC12
+Mcu.Pin24=PA11
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PD2
-Mcu.Pin28=PG10
+Mcu.Pin25=PA12
+Mcu.Pin28=PD2
 Mcu.IP6=SYS
-Mcu.Pin29=PG11
+Mcu.Pin29=PD3
 Mcu.IP7=UART5
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=90000000
 PA4.Signal=LTDC_VSYNC
 RCC.SYSCLKFreq_VALUE=180000000
-Mcu.Pin22=PA12
-Mcu.Pin23=PC10
-Mcu.Pin20=PA8
-Mcu.Pin21=PA11
-PA12.Mode=RGB666
+Mcu.Pin22=PC9
+Mcu.Pin23=PA8
+Mcu.Pin20=PC6
+Mcu.Pin21=PC7
+PA12.Mode=RGB565
+SPI5.CRCCalculation=SPI_CRCCALCULATION_DISABLE
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PG12.Locked=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 LTDC.Alpha_L0=255
-PG11.Mode=RGB666
+PG11.Mode=RGB565
 PA11.Signal=LTDC_R4
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PG6
+Mcu.Pin15=PB13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB1.Mode=RGB666
-Mcu.Pin16=PG7
-Mcu.Pin13=PB12
-Mcu.Pin14=PB13
-Mcu.Pin19=PC9
+PB1.Mode=RGB565
+Mcu.Pin16=PD12
+Mcu.Pin13=PB11
+Mcu.Pin14=PB12
+Mcu.Pin19=PG7
 ProjectManager.ComputerToolchain=false
 PF9.Signal=SPI5_MOSI
-Mcu.Pin17=PC6
+Mcu.Pin17=PD13
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PC7
+Mcu.Pin18=PG6
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
+Mcu.Pin11=PB1
+Mcu.Pin12=PB10
 RCC.PLLM=4
-PB8.Mode=RGB666
+PB8.Mode=RGB565
 RCC.PLLN=180
-Mcu.Pin10=PB1
+Mcu.Pin10=PB0
 PB8.Signal=LTDC_B6
 PA8.Mode=I2C
 PC9.Signal=I2C3_SDA
-PC7.Mode=RGB666
+PC7.Mode=RGB565
 PD2.Signal=UART5_RX
 RCC.APB1Freq_Value=45000000
-SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CRCCalculation
 LTDC.ImageHeight_L0=320
 PB0.Signal=LTDC_R3
 ProjectManager.DeviceId=STM32F429ZITx
