--- a/F429/LCDTest1/LCDTest1.ioc
+++ b/F429/LCDTest1/LCDTest1.ioc
@@ -17,7 +17,7 @@ RCC.PLLCLKFreq_Value=180000000
 PC10.Signal=LTDC_R2
 PC12.Signal=UART5_TX
 RCC.PLLQCLKFreq_Value=90000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true
 PA11.Mode=RGB565
 RCC.RTCFreq_Value=32000
 PD6.Locked=true
@@ -97,7 +97,7 @@ RCC.MCO2PinFreq_Value=180000000
 PD13.GPIO_Label=LCD WRX
 Mcu.Package=LQFP144
 PB9.Signal=LTDC_B7
-SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PB1.Signal=LTDC_R6
 PA6.Signal=LTDC_G2
 PB12.Mode=CAN_Activate
@@ -111,7 +111,7 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PF8.Signal=SPI5_MISO
 UART5.IPParameters=VirtualMode
 RCC.PLLSAIN=60
-SPI5.CalculateBaudRate=11.25 MBits/s
+SPI5.CalculateBaudRate=45.0 MBits/s
 RCC.PLLSAIR=5
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 LTDC.VSync=2
