Add TouchPad IC  - stmpe811 driver  - touchpad irq handler

--- a/F429/LCDTest2Touch/LCDTest2Touch.ioc
+++ b/F429/LCDTest2Touch/LCDTest2Touch.ioc
@@ -37,6 +37,7 @@ PD13.Locked=true
 Mcu.IP2=LTDC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP3=NVIC
+PA15.GPIO_Label=LCD TS INT1 [Touch Pad]
 Mcu.IP0=CAN2
 Mcu.IP1=I2C3
 PA12.Signal=LTDC_R5
@@ -45,6 +46,7 @@ PA4.Mode=RGB565
 PF7.Signal=SPI5_SCK
 RCC.LCDTFTFreq_Value=12000000
 Mcu.ThirdPartyNb=0
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 RCC.HCLKFreq_Value=180000000
 Mcu.IPNb=8
@@ -68,6 +70,7 @@ GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PF9
 Mcu.Pin3=PF10
 Mcu.Pin4=PH0/OSC_IN
+NVIC.EXTI15_10_IRQn=true\:15\:0\:true\:false\:true\:true\:true
 Mcu.Pin5=PH1/OSC_OUT
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
@@ -109,6 +112,7 @@ PD12.Signal=GPIO_Output
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA15.Signal=GPXTI15
 PF8.Signal=SPI5_MISO
 UART5.IPParameters=VirtualMode
 RCC.PLLSAIN=60
@@ -134,7 +138,8 @@ LTDC.VFP=4
 PG7.Locked=true
 LTDC.WindowY1_L0=320
 PG7.Signal=LTDC_CLK
-Mcu.PinsNb=37
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+Mcu.PinsNb=38
 PC9.GPIO_Label=LCD TS I2C3 SDA
 ProjectManager.NoMain=false
 PD3.Signal=LTDC_G7
@@ -157,6 +162,7 @@ LTDC.ImageWidth_L0=240
 PD12.Locked=true
 PA3.Mode=RGB565
 PF7.Mode=Full_Duplex_Master
+PA15.Locked=true
 PA8.GPIO_Label=LCD TS I2C3 SCL
 PD12.GPIOParameters=GPIO_Label
 PB11.Mode=RGB565
@@ -181,34 +187,35 @@ ProjectManager.LastFirmware=true
 PH0/OSC_IN.Signal=RCC_OSC_IN
 RCC.APB2Freq_Value=90000000
 MxCube.Version=6.2.1
+Mcu.Pin37=VP_SYS_VS_Systick
 LTDC.Layers=0
-Mcu.Pin35=PB9
-Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
 PF10.Signal=LTDC_DE
 PC2.GPIOParameters=GPIO_Label
-Mcu.Pin30=PD6
+Mcu.Pin30=PD3
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=180000000
 CAN2.CalculateTimeQuantum=200.0
-Mcu.Pin33=PG12
-Mcu.Pin34=PB8
-Mcu.Pin31=PG10
-Mcu.Pin32=PG11
+Mcu.Pin33=PG11
+Mcu.Pin34=PG12
+Mcu.Pin31=PD6
+Mcu.Pin32=PG10
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSAIR,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 PC9.GPIOParameters=GPIO_Label
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F429ZITx
-Mcu.Pin26=PC10
-Mcu.Pin27=PC12
+Mcu.Pin26=PA15
+Mcu.Pin27=PC10
 RCC.RTCHSEDivFreq_Value=4000000
 Mcu.Pin24=PA11
 ProjectManager.UnderRoot=true
 Mcu.Pin25=PA12
-Mcu.Pin28=PD2
+Mcu.Pin28=PC12
 Mcu.IP6=SYS
-Mcu.Pin29=PD3
+Mcu.Pin29=PD2
 Mcu.IP7=UART5
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=90000000
@@ -225,8 +232,8 @@ KeepUserPlacement=false
 PG12.Locked=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
-LTDC.Alpha_L0=255
 PG11.Mode=RGB565
+LTDC.Alpha_L0=255
 PA11.Signal=LTDC_R4
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PB13
@@ -236,6 +243,7 @@ Mcu.Pin16=PD12
 Mcu.Pin13=PB11
 Mcu.Pin14=PB12
 Mcu.Pin19=PG7
+SH.GPXTI15.ConfNb=1
 ProjectManager.ComputerToolchain=false
 PF9.Signal=SPI5_MOSI
 Mcu.Pin17=PD13
@@ -243,10 +251,12 @@ RCC.HSI_VALUE=16000000
 Mcu.Pin18=PG6
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PB1
+SH.GPXTI15.0=GPIO_EXTI15
 Mcu.Pin12=PB10
 RCC.PLLM=4
 PB8.Mode=RGB565
 RCC.PLLN=180
+PA15.GPIO_PuPd=GPIO_PULLUP
 Mcu.Pin10=PB0
 PB8.Signal=LTDC_B6
 PA8.Mode=I2C
