Add DMA2D Test code

--- a/F429/LCDTest3DMA2D/LCDTest3DMA2D.ioc
+++ b/F429/LCDTest3DMA2D/LCDTest3DMA2D.ioc
@@ -17,7 +17,7 @@ RCC.PLLCLKFreq_Value=180000000
 PC10.Signal=LTDC_R2
 PC12.Signal=UART5_TX
 RCC.PLLQCLKFreq_Value=90000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true
 PA11.Mode=RGB565
 RCC.RTCFreq_Value=32000
 PD6.Locked=true
@@ -30,16 +30,16 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 RCC.SAI_BClocksFreq_Value=30000000
 PD13.Signal=GPIO_Output
-Mcu.IP4=RCC
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
 RCC.FCLKCortexFreq_Value=180000000
-Mcu.IP5=SPI5
 PD13.Locked=true
-Mcu.IP2=LTDC
+Mcu.IP2=I2C3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=NVIC
+Mcu.IP3=LTDC
 PA15.GPIO_Label=LCD TS INT1 [Touch Pad]
 Mcu.IP0=CAN2
-Mcu.IP1=I2C3
+Mcu.IP1=DMA2D
 PA12.Signal=LTDC_R5
 Mcu.UserConstants=
 PA4.Mode=RGB565
@@ -49,7 +49,7 @@ Mcu.ThirdPartyNb=0
 PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 RCC.HCLKFreq_Value=180000000
-Mcu.IPNb=8
+Mcu.IPNb=9
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.APB2TimFreq_Value=180000000
@@ -91,6 +91,7 @@ LTDC.HFP=10
 PA8.Signal=I2C3_SCL
 PF8.Mode=Full_Duplex_Master
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
 PD3.Mode=RGB565
 LTDC.ActiveW=240
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
@@ -113,6 +114,7 @@ ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA15.Signal=GPXTI15
+DMA2D.IPParameters=ColorMode,Mode
 PF8.Signal=SPI5_MISO
 UART5.IPParameters=VirtualMode
 RCC.PLLSAIN=60
@@ -121,6 +123,7 @@ RCC.PLLSAIR=5
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 LTDC.VSync=2
 RCC.APB1TimFreq_Value=90000000
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PF10.Mode=RGB565
 PB13.Mode=CAN_Activate
@@ -139,7 +142,7 @@ PG7.Locked=true
 LTDC.WindowY1_L0=320
 PG7.Signal=LTDC_CLK
 PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 PC9.GPIO_Label=LCD TS I2C3 SDA
 ProjectManager.NoMain=false
 PD3.Signal=LTDC_G7
@@ -186,8 +189,10 @@ RCC.VCOOutputFreq_Value=360000000
 ProjectManager.LastFirmware=true
 PH0/OSC_IN.Signal=RCC_OSC_IN
 RCC.APB2Freq_Value=90000000
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 MxCube.Version=6.2.1
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin37=VP_DMA2D_VS_DMA2D
+Mcu.Pin38=VP_SYS_VS_Systick
 LTDC.Layers=0
 Mcu.Pin35=PB8
 Mcu.Pin36=PB9
@@ -213,10 +218,11 @@ RCC.RTCHSEDivFreq_Value=4000000
 Mcu.Pin24=PA11
 ProjectManager.UnderRoot=true
 Mcu.Pin25=PA12
+Mcu.IP8=UART5
 Mcu.Pin28=PC12
-Mcu.IP6=SYS
+Mcu.IP6=SPI5
 Mcu.Pin29=PD2
-Mcu.IP7=UART5
+Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=90000000
 PA4.Signal=LTDC_VSYNC
@@ -268,6 +274,7 @@ SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 LTDC.ImageHeight_L0=320
 PB0.Signal=LTDC_R3
 ProjectManager.DeviceId=STM32F429ZITx
+DMA2D.Mode=DMA2D_R2M
 PB12.Signal=CAN2_RX
 ProjectManager.LibraryCopy=1
 SPI5.Direction=SPI_DIRECTION_2LINES
