--- a/F429/LCDTest4SDRAM/LCDTest4SDRAM.ioc
+++ b/F429/LCDTest4SDRAM/LCDTest4SDRAM.ioc
@@ -1,278 +1,441 @@
 #MicroXplorer Configuration settings - do not modify
-Mcu.Family=STM32F4
-ProjectManager.MainLocation=Core/Src
+SH.FMC_D7_DA7.0=FMC_D7,sd-16b-d1
 PD12.GPIO_Label=LCD RDX
+SH.FMC_D0_DA0.ConfNb=1
+SH.FMC_A8.ConfNb=1
+SH.FMC_A4.ConfNb=1
+SH.FMC_A0.ConfNb=1
+SH.FMC_D6_DA6.ConfNb=1
+SH.FMC_D9_DA9.ConfNb=1
+FMC.RCDDelay1=2
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+SH.FMC_A0.0=FMC_A0,12b-sda1
+PB10.Mode=RGB565
+PG8.Signal=FMC_SDCLK
+PG4.Signal=FMC_A14_BA0
+RCC.PLLCLKFreq_Value=180000000
+PC12.Signal=UART5_TX
+RCC.PLLQCLKFreq_Value=90000000
+PG0.Signal=FMC_A10
+FMC.LoadToActiveDelay1=2
+RCC.RTCFreq_Value=32000
+SH.FMC_SDNWE.ConfNb=1
+SH.FMC_D5_DA5.0=FMC_D5,sd-16b-d1
+PB13.Signal=CAN2_TX
+PG6.Mode=RGB565
+PinOutPanel.RotationAngle=0
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
+SH.FMC_D9_DA9.0=FMC_D9,sd-16b-d1
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA4.Mode=RGB565
+PF7.Signal=SPI5_SCK
+RCC.LCDTFTFreq_Value=12000000
+SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+SH.FMC_D11_DA11.0=FMC_D11,sd-16b-d1
+RCC.APB2TimFreq_Value=180000000
+PB6.Signal=FMC_SDNE1
+SH.FMC_D10_DA10.ConfNb=1
+PC7.Signal=LTDC_G6
+PH1/OSC_OUT.Signal=RCC_OSC_OUT
+PB6.Mode=SdramChipSelect2_1
+PD0.Signal=FMC_D2_DA2
+PD8.Signal=FMC_D13_DA13
+PE1.Signal=FMC_NBL1
+NVIC.EXTI15_10_IRQn=true\:15\:0\:true\:false\:true\:true\:true
+ProjectManager.ProjectBuild=false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+FMC.SelfRefreshTime1=4
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+MxDb.Version=DB.6.0.21
+LTDC.IPParameters=PixelFormat_L0,Layers,WindowX1_L0,WindowY1_L0,Alpha_L0,HSync,HBP,ActiveW,HFP,VSync,ActiveH,VFP,ImageWidth_L0,ImageHeight_L0
+LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_ARGB8888
+ProjectManager.BackupPrevious=false
+PE9.Signal=FMC_D6_DA6
+SH.FMC_A2.0=FMC_A2,12b-sda1
+SH.FMC_D15_DA15.ConfNb=1
+PC9.Mode=I2C
+PF8.Mode=Full_Duplex_Master
+PA8.Signal=I2C3_SCL
+SH.FMC_D1_DA1.0=FMC_D1,sd-16b-d1
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PF3.Signal=FMC_A3
+PD3.Mode=RGB565
+PE10.Signal=FMC_D7_DA7
+LTDC.HSync=10
+ProjectManager.HalAssertFull=false
+RCC.MCO2PinFreq_Value=180000000
+Mcu.Package=LQFP144
+PB9.Signal=LTDC_B7
+PB1.Signal=LTDC_R6
+PD12.Signal=GPIO_Output
+SH.FMC_SDNCAS.ConfNb=1
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+SH.FMC_A11.ConfNb=1
+FMC.WriteRecoveryTime1=2
+SH.FMC_A1.0=FMC_A1,12b-sda1
+SPI5.CalculateBaudRate=45.0 MBits/s
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda1
+LTDC.VSync=2
+PF14.Signal=FMC_A8
+RCC.APB1TimFreq_Value=90000000
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+FMC.RowCycleDelay2=6
+PF10.Mode=RGB565
+FMC.RowCycleDelay1=6
+PB13.Mode=CAN_Activate
+PD15.Signal=FMC_D1_DA1
+SH.FMC_D3_DA3.0=FMC_D3,sd-16b-d1
+SPI5.VirtualType=VM_MASTER
+ProjectManager.CustomerFirmwarePackage=
+RCC.SAI_AClocksFreq_Value=30000000
+SH.FMC_D3_DA3.ConfNb=1
+PG12.Signal=LTDC_B4
+CAN2.CalculateBaudRate=250000
+SH.FMC_A4.0=FMC_A4,12b-sda1
+SH.FMC_A7.ConfNb=1
+ProjectManager.ProjectFileName=LCDTest4SDRAM.ioc
+SH.FMC_A5.ConfNb=1
+SH.FMC_A1.ConfNb=1
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+Mcu.PinsNb=77
+Mcu.Pin73=PE0
+Mcu.Pin74=PE1
+Mcu.Pin71=PB8
+Mcu.Pin72=PB9
+PG5.Signal=FMC_A15_BA1
+Mcu.Pin75=VP_DMA2D_VS_DMA2D
+SH.FMC_D10_DA10.0=FMC_D10,sd-16b-d1
+Mcu.Pin76=VP_SYS_VS_Systick
+PD3.Signal=LTDC_G7
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+Mcu.Pin70=PB6
+PC6.Signal=LTDC_HSYNC
+PC2.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD1.Signal=FMC_D3_DA3
+RCC.VCOSAIOutputFreq_ValueQ=30000000
+RCC.VCOSAIOutputFreq_ValueR=24000000
+Mcu.Pin68=PG15
+UART5.VirtualMode=Asynchronous
+Mcu.Pin69=PB5
+PC0.Signal=FMC_SDNWE
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+Mcu.Pin62=PD2
+Mcu.Pin63=PD3
+Mcu.Pin60=PD0
+Mcu.Pin61=PD1
+Mcu.Pin66=PG11
+Mcu.Pin67=PG12
+Mcu.Pin64=PD6
+Mcu.Pin65=PG10
+PG10.Signal=LTDC_G3
+PG10.Locked=true
+LTDC.ImageWidth_L0=240
+PD10.Signal=FMC_D15_DA15
+PA3.Mode=RGB565
+SH.FMC_A3.0=FMC_A3,12b-sda1
+PA15.Locked=true
+PA8.GPIO_Label=LCD TS I2C3 SCL
+Mcu.Pin59=PC12
+FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
+Mcu.Pin57=PA15
+Mcu.Pin58=PC10
+PB11.Mode=RGB565
+Mcu.Pin51=PC6
+SH.FMC_D15_DA15.0=FMC_D15,sd-16b-d1
+Mcu.Pin52=PC7
+Mcu.Pin50=PG8
+PC6.Mode=RGB565
+Mcu.Pin55=PA11
+Mcu.Pin56=PA12
+Mcu.Pin53=PC9
+Mcu.Pin54=PA8
+Mcu.Pin48=PG6
+Mcu.Pin49=PG7
+Mcu.Pin46=PG4
+Mcu.Pin47=PG5
+PB10.Signal=LTDC_G4
+Mcu.Pin40=PD9
+Mcu.Pin41=PD10
+Mcu.Pin44=PD14
+PC12.Mode=Asynchronous
+Mcu.Pin45=PD15
+Mcu.Pin42=PD12
+Mcu.Pin43=PD13
+ProjectManager.LastFirmware=true
+SH.FMC_A6.0=FMC_A6,12b-sda1
+PE14.Signal=FMC_D11_DA11
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
+PE15.Signal=FMC_D12_DA12
+Mcu.Pin37=PB12
+Mcu.Pin38=PB13
+Mcu.Pin35=PB10
+PE8.Signal=FMC_D5_DA5
+Mcu.Pin36=PB11
+SH.FMC_D14_DA14.ConfNb=1
+Mcu.Pin39=PD8
+PC2.GPIOParameters=GPIO_Label
+Mcu.Pin30=PE11
+RCC.EthernetFreq_Value=180000000
+Mcu.Pin33=PE14
+Mcu.Pin34=PE15
+Mcu.Pin31=PE12
+Mcu.Pin32=PE13
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PF13.Signal=FMC_A7
+SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda1
+ProjectManager.FreePins=false
+PC9.GPIOParameters=GPIO_Label
+SH.FMC_NBL1.ConfNb=1
+Mcu.Pin26=PE7
+Mcu.Pin27=PE8
+RCC.RTCHSEDivFreq_Value=4000000
+Mcu.Pin24=PG0
+ProjectManager.UnderRoot=true
+Mcu.Pin25=PG1
+Mcu.Pin28=PE9
+Mcu.Pin29=PE10
+SH.FMC_D7_DA7.ConfNb=1
+PA4.Signal=LTDC_VSYNC
+Mcu.Pin22=PF14
+PB5.Signal=FMC_SDCKE1
+Mcu.Pin23=PF15
+Mcu.Pin20=PF12
+Mcu.Pin21=PF13
+NVIC.ForceEnableDMAVector=true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+SH.FMC_A10.ConfNb=1
+ProjectManager.CompilerOptimize=6
+SH.FMC_A5.0=FMC_A5,12b-sda1
+PG11.Mode=RGB565
+LTDC.Alpha_L0=255
+PA11.Signal=LTDC_R4
+SH.FMC_SDNRAS.ConfNb=1
+ProjectManager.HeapSize=0x200
+Mcu.Pin15=PA4
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB1.Mode=RGB565
+Mcu.Pin16=PA6
+Mcu.Pin13=PC2
+Mcu.Pin14=PA3
+Mcu.Pin19=PF11
+SH.GPXTI15.ConfNb=1
+ProjectManager.ComputerToolchain=false
+Mcu.Pin17=PB0
+PF9.Signal=SPI5_MOSI
+Mcu.Pin18=PB1
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+Mcu.Pin11=PH1/OSC_OUT
+Mcu.Pin12=PC0
+PB8.Mode=RGB565
+Mcu.Pin10=PH0/OSC_IN
+PA8.Mode=I2C
+PF4.Signal=FMC_A4
+SH.FMC_D12_DA12.ConfNb=1
+PD2.Signal=UART5_RX
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CRCCalculation
+PB0.Signal=LTDC_R3
+Mcu.Family=STM32F4
+FMC.IPParameters=CASLatency1,SDClockPeriod1,ReadPipeDelay1,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,WriteRecoveryTime1,RowCycleDelay1,RCDDelay1,RPDelay1,RowCycleDelay2
+ProjectManager.MainLocation=Core/Src
+SH.FMC_A6.ConfNb=1
 PA6.Mode=RGB565
+SH.FMC_A8.0=FMC_A8,12b-sda1
 RCC.CortexFreq_Value=180000000
+SH.FMC_A2.ConfNb=1
 PG6.Signal=LTDC_R7
 NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F429ZITx
-PB10.Mode=RGB565
+SH.FMC_D14_DA14.0=FMC_D14,sd-16b-d1
 LTDC.HBP=20
 CAN2.CalculateTimeBit=4000.00
 PC10.Locked=true
 PG6.Locked=true
-RCC.PLLCLKFreq_Value=180000000
 PC10.Signal=LTDC_R2
-PC12.Signal=UART5_TX
-RCC.PLLQCLKFreq_Value=90000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true
+SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true
+SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
 PA11.Mode=RGB565
-RCC.RTCFreq_Value=32000
 PD6.Locked=true
+SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks1
+SH.FMC_A11.0=FMC_A11,12b-sda1
 PB11.Signal=LTDC_G5
-PB13.Signal=CAN2_TX
-PG6.Mode=RGB565
-PinOutPanel.RotationAngle=0
 PG11.Signal=LTDC_B3
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+PG15.Signal=FMC_SDNCAS
 ProjectManager.StackSize=0x400
 RCC.SAI_BClocksFreq_Value=30000000
 PD13.Signal=GPIO_Output
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
+Mcu.IP4=LTDC
+Mcu.IP5=NVIC
 RCC.FCLKCortexFreq_Value=180000000
+Mcu.IP2=FMC
 PD13.Locked=true
-Mcu.IP2=I2C3
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=LTDC
+Mcu.IP3=I2C3
 PA15.GPIO_Label=LCD TS INT1 [Touch Pad]
 Mcu.IP0=CAN2
+SH.FMC_A7.0=FMC_A7,12b-sda1
 Mcu.IP1=DMA2D
 PA12.Signal=LTDC_R5
 Mcu.UserConstants=
-PA4.Mode=RGB565
-PF7.Signal=SPI5_SCK
-RCC.LCDTFTFreq_Value=12000000
 Mcu.ThirdPartyNb=0
-PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 RCC.HCLKFreq_Value=180000000
-Mcu.IPNb=9
+Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
-RCC.APB2TimFreq_Value=180000000
 RCC.VcooutputI2S=192000000
-PC7.Signal=LTDC_G6
+SH.FMC_NBL1.0=FMC_NBL1,Sd2ByteEnable1
 LTDC.WindowX1_L0=240
-PH1/OSC_OUT.Signal=RCC_OSC_OUT
+PF12.Signal=FMC_A6
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PC2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA6
+Mcu.Pin6=PF7
+Mcu.Pin7=PF8
+Mcu.Pin8=PF9
+Mcu.Pin9=PF10
 RCC.VCOSAIOutputFreq_Value=120000000
+SH.FMC_A10.0=FMC_A10,12b-sda1
 RCC.AHBFreq_Value=180000000
-Mcu.Pin0=PF7
-Mcu.Pin1=PF8
+Mcu.Pin0=PF0
+Mcu.Pin1=PF1
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PF9
-Mcu.Pin3=PF10
-Mcu.Pin4=PH0/OSC_IN
-NVIC.EXTI15_10_IRQn=true\:15\:0\:true\:false\:true\:true\:true
-Mcu.Pin5=PH1/OSC_OUT
-ProjectManager.ProjectBuild=false
+Mcu.Pin2=PF2
+Mcu.Pin3=PF3
+Mcu.Pin4=PF4
+Mcu.Pin5=PF5
 RCC.HSE_VALUE=8000000
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+SH.FMC_A14_BA0.ConfNb=1
+SH.FMC_D8_DA8.0=FMC_D8,sd-16b-d1
+FMC.ExitSelfRefreshDelay1=7
+FMC.RPDelay1=2
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
-MxDb.Version=DB.6.0.21
-LTDC.IPParameters=PixelFormat_L0,Layers,WindowX1_L0,WindowY1_L0,Alpha_L0,HSync,HBP,ActiveW,HFP,VSync,ActiveH,VFP,ImageWidth_L0,ImageHeight_L0
-LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
+SH.FMC_D2_DA2.0=FMC_D2,sd-16b-d1
 PF9.Mode=Full_Duplex_Master
-ProjectManager.BackupPrevious=false
+PE13.Signal=FMC_D10_DA10
 RCC.VCOInputFreq_Value=2000000
 CAN2.Prescaler=9
+PF11.Signal=FMC_SDNRAS
+PB5.Mode=SdramChipSelect2_1
 File.Version=6
-PC9.Mode=I2C
+SH.FMC_D5_DA5.ConfNb=1
 LTDC.HFP=10
-PA8.Signal=I2C3_SCL
-PF8.Mode=Full_Duplex_Master
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
-PD3.Mode=RGB565
+SH.FMC_D2_DA2.ConfNb=1
+FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
+SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
+DMA2D.ColorMode=DMA2D_OUTPUT_ARGB8888
 LTDC.ActiveW=240
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
-LTDC.HSync=10
-ProjectManager.HalAssertFull=false
 ProjectManager.ProjectName=LCDTest4SDRAM
-RCC.MCO2PinFreq_Value=180000000
 PD13.GPIO_Label=LCD WRX
-Mcu.Package=LQFP144
-PB9.Signal=LTDC_B7
 SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-PB1.Signal=LTDC_R6
 PA6.Signal=LTDC_G2
 PB12.Mode=CAN_Activate
+SH.FMC_D0_DA0.0=FMC_D0,sd-16b-d1
 CAN2.BS1=CAN_BS1_16TQ
 CAN2.BS2=CAN_BS2_3TQ
 PG11.Locked=true
-PD12.Signal=GPIO_Output
+SH.FMC_D4_DA4.ConfNb=1
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+SH.FMC_A9.0=FMC_A9,12b-sda1
 PA15.Signal=GPXTI15
 DMA2D.IPParameters=ColorMode,Mode
 PF8.Signal=SPI5_MISO
 UART5.IPParameters=VirtualMode
+SH.FMC_D4_DA4.0=FMC_D4,sd-16b-d1
 RCC.PLLSAIN=60
-SPI5.CalculateBaudRate=45.0 MBits/s
+PF5.Signal=FMC_A5
 RCC.PLLSAIR=5
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-LTDC.VSync=2
-RCC.APB1TimFreq_Value=90000000
-VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PF10.Mode=RGB565
-PB13.Mode=CAN_Activate
+PF0.Signal=FMC_A0
+PE7.Signal=FMC_D4_DA4
+SH.FMC_NBL0.ConfNb=1
 PD6.Signal=LTDC_B2
 PC2.GPIO_Label=LCD CSX
-SPI5.VirtualType=VM_MASTER
-ProjectManager.CustomerFirmwarePackage=
-RCC.SAI_AClocksFreq_Value=30000000
 PA3.Signal=LTDC_B5
-PG12.Signal=LTDC_B4
+SH.FMC_A3.ConfNb=1
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-CAN2.CalculateBaudRate=250000
-ProjectManager.ProjectFileName=LCDTest4SDRAM.ioc
+SH.FMC_A9.ConfNb=1
 LTDC.VFP=4
 PG7.Locked=true
 LTDC.WindowY1_L0=320
 PG7.Signal=LTDC_CLK
-PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-Mcu.PinsNb=39
 PC9.GPIO_Label=LCD TS I2C3 SDA
 ProjectManager.NoMain=false
-PD3.Signal=LTDC_G7
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
-PC2.Signal=GPIO_Output
-PC6.Signal=LTDC_HSYNC
+PG1.Signal=FMC_A11
+SH.FMC_SDCLK.ConfNb=1
 PG10.Mode=RGB565
-PD13.GPIOParameters=GPIO_Label
 ProjectManager.DefaultFWLocation=true
-RCC.VCOSAIOutputFreq_ValueQ=30000000
-RCC.VCOSAIOutputFreq_ValueR=24000000
+PD9.Signal=FMC_D14_DA14
 ProjectManager.DeletePrevious=true
-UART5.VirtualMode=Asynchronous
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
 SPI5.Mode=SPI_MODE_MASTER
 RCC.FamilyName=M
-PG10.Signal=LTDC_G3
-PG10.Locked=true
-LTDC.ImageWidth_L0=240
 PD12.Locked=true
-PA3.Mode=RGB565
 PF7.Mode=Full_Duplex_Master
-PA15.Locked=true
-PA8.GPIO_Label=LCD TS I2C3 SCL
+SH.FMC_A15_BA1.ConfNb=1
 PD12.GPIOParameters=GPIO_Label
-PB11.Mode=RGB565
 ProjectManager.TargetToolchain=STM32CubeIDE
+SH.FMC_D13_DA13.0=FMC_D13,sd-16b-d1
 LTDC.ActiveH=320
-PC6.Mode=RGB565
+SH.FMC_D1_DA1.ConfNb=1
 PB9.Mode=RGB565
 RCC.VcooutputI2SQ=192000000
+PF2.Signal=FMC_A2
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
+PE11.Signal=FMC_D8_DA8
 PG7.Mode=RGB565
 RCC.LSE_VALUE=32768
-PB10.Signal=LTDC_G4
 RCC.VCOI2SOutputFreq_Value=384000000
 PD2.Mode=Asynchronous
-PC12.Mode=Asynchronous
 PB0.Mode=RGB565
 board=custom
 PG12.Mode=RGB565
 RCC.VCOOutputFreq_Value=360000000
-ProjectManager.LastFirmware=true
 PH0/OSC_IN.Signal=RCC_OSC_IN
 RCC.APB2Freq_Value=90000000
-VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 MxCube.Version=6.2.1
-Mcu.Pin37=VP_DMA2D_VS_DMA2D
-Mcu.Pin38=VP_SYS_VS_Systick
+SH.FMC_D13_DA13.ConfNb=1
 LTDC.Layers=0
-Mcu.Pin35=PB8
-Mcu.Pin36=PB9
 PF10.Signal=LTDC_DE
-PC2.GPIOParameters=GPIO_Label
-Mcu.Pin30=PD3
 VP_SYS_VS_Systick.Mode=SysTick
-RCC.EthernetFreq_Value=180000000
 CAN2.CalculateTimeQuantum=200.0
-Mcu.Pin33=PG11
-Mcu.Pin34=PG12
-Mcu.Pin31=PD6
-Mcu.Pin32=PG10
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.FreePins=false
+SH.FMC_D12_DA12.0=FMC_D12,sd-16b-d1
+PF15.Signal=FMC_A9
+PF1.Signal=FMC_A1
+SH.FMC_D11_DA11.ConfNb=1
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSAIR,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
-PC9.GPIOParameters=GPIO_Label
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F429ZITx
-Mcu.Pin26=PA15
-Mcu.Pin27=PC10
-RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA11
-ProjectManager.UnderRoot=true
-Mcu.Pin25=PA12
-Mcu.IP8=UART5
-Mcu.Pin28=PC12
-Mcu.IP6=SPI5
-Mcu.Pin29=PD2
-Mcu.IP7=SYS
+PE0.Signal=FMC_NBL0
+PE12.Signal=FMC_D9_DA9
+Mcu.IP8=SYS
+Mcu.IP9=UART5
+PD14.Signal=FMC_D0_DA0
+Mcu.IP6=RCC
+Mcu.IP7=SPI5
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=90000000
-PA4.Signal=LTDC_VSYNC
 RCC.SYSCLKFreq_VALUE=180000000
-Mcu.Pin22=PC9
-Mcu.Pin23=PA8
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
 PA12.Mode=RGB565
 SPI5.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PG12.Locked=true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.CompilerOptimize=6
-PG11.Mode=RGB565
-LTDC.Alpha_L0=255
-PA11.Signal=LTDC_R4
-ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB13
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB1.Mode=RGB565
-Mcu.Pin16=PD12
-Mcu.Pin13=PB11
-Mcu.Pin14=PB12
-Mcu.Pin19=PG7
-SH.GPXTI15.ConfNb=1
-ProjectManager.ComputerToolchain=false
-PF9.Signal=SPI5_MOSI
-Mcu.Pin17=PD13
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PG6
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB1
 SH.GPXTI15.0=GPIO_EXTI15
-Mcu.Pin12=PB10
 RCC.PLLM=4
-PB8.Mode=RGB565
 RCC.PLLN=180
 PA15.GPIO_PuPd=GPIO_PULLUP
-Mcu.Pin10=PB0
 PB8.Signal=LTDC_B6
-PA8.Mode=I2C
 PC9.Signal=I2C3_SDA
 PC7.Mode=RGB565
-PD2.Signal=UART5_RX
+SH.FMC_D8_DA8.ConfNb=1
 RCC.APB1Freq_Value=45000000
-SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CRCCalculation
 LTDC.ImageHeight_L0=320
-PB0.Signal=LTDC_R3
 ProjectManager.DeviceId=STM32F429ZITx
 DMA2D.Mode=DMA2D_R2M
 PB12.Signal=CAN2_RX
