Update ADC config

--- a/F429/ADC2CANTest/ADC2CANTest.ioc
+++ b/F429/ADC2CANTest/ADC2CANTest.ioc
@@ -17,7 +17,7 @@ PC12.Signal=UART5_TX
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler,BS2
 RCC.PLLQCLKFreq_Value=90000000
 CAN1.CalculateBaudRate=250000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_UART5_Init-UART5-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_UART5_Init-UART5-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true
 PA11.Mode=CAN_Activate
 SH.GPXTI0.ConfNb=1
 RCC.RTCFreq_Value=32768
@@ -92,7 +92,7 @@ RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PC12.Mode=Asynchronous
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ADC1.ScanConvMode=ENABLE
+ADC1.ScanConvMode=DISABLE
 TIM7.Prescaler=9
 board=custom
 RCC.VCOOutputFreq_Value=360000000
